footer and experience added

--- a/style.css
+++ b/style.css
@@ -112,10 +112,13 @@ margin: 0%;
 h1{
     font-size: 50px;
 }
+h2{
+  font-size: 40px;
+}
 .orange-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 230px;
 }
@@ -139,4 +142,31 @@ section{
     background-image: url(banner.jpeg);
     background-repeat: no-repeat;
     padding-right: 10px;
+}
+.experience-area{
+  background-image: url(banner.jpeg);
+  background-repeat: no-repeat;
+  background-position: right;
+
+}
+.experience-item{
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 20px;
+  box-shadow: 4px 4px 40px gray;
+}
+#full-stack-experience{
+  border-left:  7px solid ;
+  border-image: linear-gradient(red,orange);
+  border-image-slice: 1;
+}
+#baby-stack-experience{
+   border-left:  7px solid ;
+  border-image: linear-gradient(blue,navy);
+  border-image-slice: 2;
+}
+footer p{
+  text-align: center;
+}
 }
